@@ -137,3 +137,4 @@ This file documents software changes since the third edition.
   correlation = FALSE.
 - there is a vcov() method for class "negbin": unlike the "glm" method
   this defaults to dispersion = 1.
+- coding for 'sex' in ?Melanoma has been corrected.
